# bevy-boids

./: Cargo.toml  README.md
src/: boid.rs  main.rs  movement.rs  spatial_grid.rs
