[package]
name = "bevy-boids"
version = "0.1.0"
authors = ["hakq <hakq@tuta.io>"]
edition = "2021"
description = "Boids simulation in Bevy"
readme = "README.md"
license = "MIT"

[dependencies]
bevy = { version = "0.11.0", features = ["dynamic_linking"] }

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
